<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_25sdp"
        android:background="@color/white"
        tools:context=".ForgotPasswordActivity">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/ic_backk"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:tint="@color/black"
            />
        <LinearLayout
            android:layout_below="@id/ivBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_30sdp"
                android:textColor="@color/black"
                android:text="@string/forgot_password"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/forgotpasswordtext"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_25sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_circle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppinsregular"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/send"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <ImageView
            android:id="@+id/bottom_white_line"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_5sdp"
            android:background="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_5sdp"
            />
    </RelativeLayout>
</layout>