<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.WelcomePage">


     <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_85sdp"
                android:background="@drawable/ic_rectangle"
                android:orientation="horizontal"
                android:padding="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:src="@drawable/ic_backk">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Add New Card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear3"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:orientation="horizontal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/natural_gray">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/bank_name"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:orientation="horizontal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/natural_gray">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/bank_account_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:orientation="horizontal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/natural_gray">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/ifsc_code"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/poppinsregular"
                    android:orientation="horizontal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/natural_gray">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/poppinsregular"
                        android:hint="@string/bank_holder_name"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/natural_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_margin="@dimen/_20sdp"
                    android:id="@+id/reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_baground">

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:text="ADD CARD"
                        android:textColor="#005D78"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"></TextView>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
</layout>